# AudioTranscriber

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: deepgram_sdk.rs  main.rs
src/audio/: mod.rs  recorder.rs  wav.rs
